--- a/Dockerfile-rhel
+++ b/Dockerfile-rhel
@@ -41,7 +41,7 @@ RUN mv /etc/dd-agent/datadog.conf.example /etc/dd-agent/datadog.conf \
  && sed -i "/user=dd-agent/d" /etc/dd-agent/supervisor.conf \
  && sed -i 's/AGENTUSER="dd-agent"/AGENTUSER="root"/g' /etc/init.d/datadog-agent \
  && rm /etc/dd-agent/conf.d/network.yaml.default
- #|| chmod +x /etc/init.d/datadog-agent
+ || chmod +x /etc/init.d/datadog-agent
 
 COPY conf.d/docker_daemon.yaml /etc/dd-agent/conf.d/docker_daemon.yaml
 
